# WorldBuilder

./: .gitignore  PowerLevel.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/starter-templates/: character.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: asset.rs  entry.rs  export.rs  mod.rs  project.rs  recents.rs  session.rs  template.rs  vocabulary.rs
src-tauri/src/domain/: entry.rs  field.rs  layout.rs  mod.rs  project.rs  template.rs  vocabulary.rs
src-tauri/src/storage/: active_project_store.rs  asset_store.rs  entry_store.rs  json_io.rs  mod.rs  paths.rs  project_db.rs  project_store.rs  recents_store.rs  starter.rs  starter_templates.rs  template_store.rs  timestamp.rs  vocab_db.rs  vocab_store.rs
src/components/: Button.module.css  Button.tsx  Markdown.module.css  Markdown.tsx  Modal.module.css  Modal.tsx  TemplateIcon.tsx
src/components/fields/: BooleanField.tsx  DateField.tsx  FieldRenderer.tsx  FormField.tsx  ImageField.tsx  ImageListField.tsx  MarkdownField.tsx  NumberField.tsx  (+11 more)
src/constants/: common-fields.ts  format.ts
src/hooks/: use-asset-url.ts  use-current-project.tsx  use-entries.ts  use-entry-view-mode.tsx  use-preferences.tsx  use-recents.ts  use-tabs.tsx  use-templates.ts  use-theme.tsx  use-vocabularies.ts
src/lib/: template-icons.ts  themes.ts  wikilinks.ts
src/styles/: global.css
src/types/: asset.ts  entry.ts  field.ts  index.ts  layout.ts  project.ts  template.ts  vocabulary.ts
(+88 files in other folders)
