[package]
name = "worldbuilder"
version = "0.1.0"
description = "A desktop worldbuilding app with wiki-style entries and a relationship graph."
authors = ["Riccardo"]
edition = "2021"

[lib]
# `_lib` suffix avoids a name clash with the binary on Windows.
# https://github.com/rust-lang/cargo/issues/8519
name = "worldbuilder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting"] }

